--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hyperswarm/dht",
-  "version": "0.0.1",
+  "name": "dwswarm-dht",
+  "version": "beta",
   "description": "The DHT backing the HyperSwarm stack",
   "main": "index.js",
   "dependencies": {
