--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "standard": "^12.0.1"
   },
   "bin": {
-    "hyperswarm-dht": "./bin.js"
+    "dwswarm-dht": "./bin.js"
   },
   "scripts": {
     "test": "standard",
@@ -22,12 +22,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mafintosh/dht.git"
+    "url": "https://github.com/distributedweb/dht.git"
   },
-  "author": "Mathias Buus (@mafintosh)",
+  "author": "Mathias Buus (@distributedweb)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hyperswarm/dht/issues"
+    "url": "https://github.com/dwswarm/dht/issues"
   },
-  "homepage": "https://github.com/hyperswarm/dht"
+  "homepage": "https://github.com/dwswarm/dht"
 }
